# AnnotationVerifier

./: CMakeLists.txt  README.md  bbox_verifier.cpp  json2txt.py  semantic_verifier.cpp  types.h  utils.cpp  utils.h
data/bbox/label/: 000000.txt  000001.txt  000002.txt
data/bbox/pcd/: 000000.pcd  000001.pcd  000002.pcd
data/semantic/: json2txt.py
data/semantic/label/: 000000.label  000001.label  000002.label
data/semantic/pcd/: 000000.pcd  000001.pcd  000002.pcd
